fix issue with main container alignment

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -51,10 +51,6 @@ textarea {
     text-align: center;
 }
 
-.container {
-    display: inline-block;
-
-}
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
   /* Hide captions */
